# FinancialInsights

./: .dockerignore  .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
db/: init_db.sh  schema.sql
kafka/: create_topics.sh
pipelines/: ingestor_consumer.py
pipelines/producers/: daily_api_ingest.py  news_producer_dummy.py
services/api/: Dockerfile
